// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login to registered user logs you in if you have a session 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "registered": true,
      },
      "type": "AUTH_REGISTERED",
    },
  ],
]
`;

exports[`login to registered user logs you in if you supply correct personal code 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "registered": true,
      },
      "type": "AUTH_REGISTERED",
    },
  ],
]
`;

exports[`login to registered user returns error if trying to log in with incorrect personal code 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Feil personlig kode",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`login to registered user works even if registration is closed 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "registered": true,
      },
      "type": "AUTH_REGISTERED",
    },
  ],
]
`;

exports[`register emits error when handling errors when saving anonymous user 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Noe gikk galt under registreringen. Prøv igjen",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`register emits error when handling errors when validating hash 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Validering av personlig kode feilet",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`register emits error when pin code is wrong 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Feil pinkode",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`register emits error when registration is closed 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Registreringen er ikke åpen.",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`register emits error when user is already registered with wrong personal code 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Feil personlig kode",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`register emits registered when user is already registered with correct personal code 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "registered": true,
      },
      "type": "AUTH_REGISTERED",
    },
  ],
]
`;

exports[`register emits registration status 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "registered": true,
      },
      "type": "AUTH_REGISTERED",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "canVote": true,
        "id": "123",
        "name": "Namy",
      },
      "type": "ADD_USER",
    },
  ],
]
`;

exports[`register emits registration status 2`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "canVote": true,
        "id": "123",
        "name": "Namy",
      },
      "type": "ADD_USER",
    },
  ],
]
`;
